{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 225,
  "lineage": "1b16a5f6-b142-fadf-01f4-4d9d0e885b82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d2a03fd3bea2ff8",
            "association_id": "eipassoc-010fd7689874a3dca",
            "domain": "vpc",
            "id": "eipalloc-05d2a03fd3bea2ff8",
            "instance": "i-00cf3f1b2c4520674",
            "network_border_group": "us-east-1",
            "network_interface": "eni-035eab66522fe87c5",
            "private_dns": "ip-10-0-1-226.ec2.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-54-164-198-9.compute-1.amazonaws.com",
            "public_ip": "54.164.198.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing_hamzaecsec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:979490057625:instance/i-00cf3f1b2c4520674",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cf3f1b2c4520674",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hamzaecsec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035eab66522fe87c5",
            "private_dns": "ip-10-0-1-226.ec2.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-54-87-120-99.compute-1.amazonaws.com",
            "public_ip": "54.87.120.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05acc5cfebfeeb06a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07173298ef3ccedc4",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-037505542ebb4ef69"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing_hamzaecsec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:internet-gateway/igw-0da54093b9538e992",
            "id": "igw-0da54093b9538e992",
            "owner_id": "979490057625",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:route-table/rtb-0330bdae47308f0d8",
            "id": "rtb-0330bdae47308f0d8",
            "owner_id": "979490057625",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "timeouts": null,
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:route-table/rtb-0d93cfc357b769943",
            "id": "rtb-0d93cfc357b769943",
            "owner_id": "979490057625",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da54093b9538e992",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "timeouts": null,
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa166d8e05ef8d7d",
            "route_table_id": "rtb-0330bdae47308f0d8",
            "subnet_id": "subnet-05c9344de108321b5"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a70a5e0e168ecb0",
            "route_table_id": "rtb-0330bdae47308f0d8",
            "subnet_id": "subnet-076b43325845b10f1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0765a61b6d8752d2d",
            "route_table_id": "rtb-0d93cfc357b769943",
            "subnet_id": "subnet-07173298ef3ccedc4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:security-group/sg-01c26f5df97ca5350",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01c26f5df97ca5350",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037505542ebb4ef69"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hamzaci1",
            "name_prefix": "",
            "owner_id": "979490057625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "timeouts": null,
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:security-group/sg-037505542ebb4ef69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037505542ebb4ef69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hamzaci",
            "name_prefix": "",
            "owner_id": "979490057625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "timeouts": null,
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:subnet/subnet-05c9344de108321b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c9344de108321b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979490057625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:subnet/subnet-076b43325845b10f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076b43325845b10f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979490057625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:subnet/subnet-07173298ef3ccedc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07173298ef3ccedc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979490057625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "vpc_id": "vpc-00572dc8cf9c4b006"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:vpc/vpc-00572dc8cf9c4b006",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058c16fbc4597782d",
            "default_route_table_id": "rtb-005b52bf3c9f97092",
            "default_security_group_id": "sg-066af4e32f6a8ef5c",
            "dhcp_options_id": "dopt-07ef62f1f880c50d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00572dc8cf9c4b006",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005b52bf3c9f97092",
            "owner_id": "979490057625",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            }
          }
        }
      ]
    }
  ]
}